# Prosperity

./: README.md  analysis.ipynb  analysis.py  pyproject.toml  strat_example.py  strat_passive_only.py
ROUND0/: analysis.ipynb  strat28.py  strat_bot_manipulation.py  strat_passive_reducing.py
ROUND1/: analysis.ipynb  strat_passive_reducing.py
